--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    background-color: #80a1bbb8;
+  
   }
 
 main {
@@ -34,7 +34,7 @@ main {
 
 } 
 #faded {
-    background-image: url('static/css/img/romanov.jpg'); 
+    background: url('static/css/img/romanov.jpg'); 
      position:fixed;
     top:0;
     bottom:0;
@@ -47,12 +47,14 @@ main {
 
 h2{
     text-align: center;
-    margin-top:60px;
+    margin-top:100px;
     margin-left: 15px;
-    font-size:2 rem;
+    font-size:2.5 rem;
     letter-spacing: 5px;
     font-family: Playfair Display;
-    color:gold
+    color:gold;
+    background-image: url('static/css/img/romanov.jpg')
+
 }
 
 /*-- NavBar --*/
